Fixed overflow error for contacts.scss

--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -108,7 +108,7 @@
     width: 678px;
 
     margin-top: 0px;
-    padding-right: 10px;
+    padding-right: 100px;
     padding-left: 0;
 
     &::before {
